# wolf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  barcode-reader.service  barcode.py  command.py  common.py  concept.puml  config.py  emprunt.py  formation.py  formations.json  fournisseurs.json  fournisseurs.py  main.py  member.py  pyproject.toml  requirements.txt  rfid.py  run_api.py  setup.py  stock.py  wolf.service
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  deploy_eirlab_cloud.yml  deploy_sonu_dev_gazebo.yml  deploy_sonu_dev_gzsim.yml  main.yml  notion_latex.yml  pr_agent.yml  pylint.yml  qodana_code_quality.yml  test-gh.yml  unittest.yml
Remote/: test.json
Remote/wolf/: wolf.ino
Remote/wolf_esp/: wolf_esp.ino
doc/: requirements.txt
docs/: requirements.txt
docs/img/: sdk_adherent.puml  sdk_arrivage.puml  sdk_formation.puml  sdk_recherche.puml
docs/source/: adherent.rst  barcode.rst  common.rst  conf.py  core.rst  emprunt.rst  formation.rst  index.rst  installation.md  notion.rst  notion2latex.rst  rfid.rst  stock.rst
docs/source/core/: core.rst
static/styles/: styles.css
templates/: 404.html  500.html  base.html  emprunt.html  formations.html  index.html  index_old.html  sidebar.html  stock.html
tests/: test_api.py  test_application.py  test_notion.py  test_runner.py
wolf/: __init__.py  example_job.py  install.py  main.py  notion.py  notion_latex.py  sync_calendar.py
