[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wolf"
version = "2.1"
description = "A library using wolf core to implement applications for services automation"
authors = ["sedelpeuch <sebastien@delpeuch.net>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"

[tool.poetry.scripts]
notion_latex = "wolf.notion_latex:main"

[tool.poetry.dependencies]
python = "^3.8"
wolf-core = { version = "1.0", source = "testpypi" }
unidecode = "^1.2.0"
pygit2 = "^1.6.1"
pygithub = "^1.59.0"
notion2md = "^2.8.3"

[packages]
wolf = { path = "wolf", develop = false }